Fix z-index on dialog

--- a/css/mdl-jquery-modal-dialog.css
+++ b/css/mdl-jquery-modal-dialog.css
@@ -1,3 +1,8 @@
+.dialog-container.not-in-use {
+    opacity:0;
+    z-index:-1;
+}
+
 .dialog-container,
 .loading-container {
     position: absolute;
@@ -7,7 +12,7 @@
     left: 0;
     overflow: scroll;
     background: rgba(0, 0, 0, 0.4);
-    opacity:0;
+    opacity: 1;
     z-index: 9999;
     -webkit-transition: opacity 400ms ease-in;
     -moz-transition: opacity 400ms ease-in;
